--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=LibraryHub
-spring.datasource.url=jdbc:mysql://localhost:3306/hub_db
+spring.datasource.url=jdbc:mysql://mysql:3306/hub_db
 spring.datasource.username=root
 spring.datasource.password=mysqlpassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
